--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,17 @@
         android:theme="@style/AppTheme">
         <activity android:name=".CustomActivity">
             <intent-filter>
+                <action android:name="android.intent.action" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".LauncherActivity">
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".StandardActivity"></activity>
     </application>
 
 </manifest>
