--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,22 +8,19 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CustomActivity"
-                    android:screenOrientation="portrait">
+        <activity android:name=".CustomActivity">
             <intent-filter>
                 <action android:name="android.intent.action" />
             </intent-filter>
         </activity>
-        <activity android:name=".LauncherActivity"
-            android:screenOrientation="portrait">
+        <activity android:name=".LauncherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".StandardActivity"
-            android:screenOrientation="portrait"></activity>
+        <activity android:name=".StandardActivity"></activity>
     </application>
 
 </manifest>
